
    package: 'soiltexture'

CHANGES IN VERSION 1.5.1
    
    2018/09/19  Files languages.rds and triangles.rds 
        re-generated after some issues when runiing tests 
        on Travis CI and AppVeyor. Not sure if that was needed.
    
CHANGES IN VERSION 1.5.0
    
    2018/06/28  The file soiltexture-package.Rd is now 
        generated by utils::promptPackage(). It was out 
        of sync with the DESCRIPTION. On a request of CRAN,
    
    2018/06/27  Added a new clone of the texture triangle 
        CA.EN.TT (here called CA2.EN.TT) with the official 
        texture labels, so it can be used for governmental 
        purpose.
    
CHANGES IN VERSION 1.4.6
    
    2017/05/01  The bibTeX file vignettes/soiltexture_vignette.bib 
        was sanitised for non-ascii characters, that 
        were replaced by equivalent LaTeX command. (after 
        a reqtest from CRAN maintainer)
    
CHANGES IN VERSION 1.4.5
    
    2017/09/27  Added a field "BugReports" to the package 
        DESCRIPTION, with a link to the package 
        GitHub issue tracing system.
    
CHANGES IN VERSION 1.4.4
    
    2017/09/27  Added a new "duplicate" of the USDA 
        soil texture triangle, identical to USDA.TT, 
        except that the labels have been changed to 
        match better class-abbreviations currently used 
        at USDA-NCSS (after a suggestion from Dylan Beaudette, 
        NCSS).
    
CHANGES IN VERSION 1.4.3

    2017/03/05 to 2017/03/29
        Added yet several polish texture triangles:
        *   Polish_PTG_1956_Musierowicz.TT
        *   Polish_kategorie_agronomiczne_1990.TT
        *   PTG_2008.TT
        
        All are courtesy of Michal Stepien and Darek Gozdowski.
        
        The following triangles
        *   Polish_PTG_1956_Musierowicz.TT
        *   Polish_BN_1978.TT
        *   Polish_kategorie_agronomiczne_1990.TT
        *   (PTG_2008.TT)?
        
        Now include polish characters (thanks to Michal Stepien). 